--- a/.github/workflows/cmake-single-platform.yml
+++ b/.github/workflows/cmake-single-platform.yml
@@ -30,16 +30,23 @@ jobs:
         path: ${{github.workspace}}/build/Release/Hellextractor.exe
         if-no-files-found: error # Optional: 'warn', 'error', 'ignore'
 
-    - name: Generate Changelog
-      id: changelog
-      uses: mikepenz/release-changelog-builder-action@v3
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Generate Release Name, Tag, and Notes
+      id: release_info
+      run: |
+        echo "RELEASE_TAG=$(date +'%Y%m%d%H%M%S')" >> $GITHUB_ENV
+        echo "RELEASE_NAME=Release-$(date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
+        # Get last 5 commit messages
+        COMMIT_MESSAGES=$(git log -5 --pretty=format:"%h - %s")
+        echo "RELEASE_NOTES=Recent changes:\n$COMMIT_MESSAGES" >> $GITHUB_ENV
+
 
     - name: Create Release
       uses: softprops/action-gh-release@v1
       with:
-        files: build/Release/Hellextractor.exe
-        body: ${{ steps.changelog.outputs.changelog }}
+        tag_name: ${{ env.RELEASE_TAG }}
+        release_name: ${{ env.RELEASE_NAME }}
+        body: ${{ env.RELEASE_NOTES }}
+        files: |
+          build/Release/Hellextractor.exe
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
